[package]
name = "rlox"
version = "0.1.0"
authors = ["spacedragon <spacedragon@me.com>"]
edition = "2018"

[[bin]]
name = "rlox"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
log = "0.4.8"
env_logger = "0.7.1"
lazy_static = "1.4.0"
strum = "0.17.1"
strum_macros = "0.17.1"
quick-error = "1.2.3"